--- a/README.Rmd
+++ b/README.Rmd
@@ -33,3 +33,12 @@ Install:
     }
     devtools::install_github("mokazuma/imhistR")
     ```
+
+For example,
+
+    ```R
+    require("imhistR")
+    lrgbhist("http://blog-imgs-35-origin.fc2.com/i/m/a/imagingsolution/Lenna.png", mode="url", hist="Lena")
+    ```
+
+
