--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ It motivated to visualize image luminance and color space. It have two main goal
 
 Install:
 
-* the latest development version get from github with
+* The latest development version get from github with
 
     ```R
     if (packageVersion("devtools") < 1.6) {
@@ -34,11 +34,13 @@ Install:
     devtools::install_github("mokazuma/imhistR")
     ```
 
-For example,
+* Usage example: 
 
     ```R
     require("imhistR")
-    lrgbhist("http://blog-imgs-35-origin.fc2.com/i/m/a/imagingsolution/Lenna.png", mode="url", hist="Lena")
+    lrgbhist("http://www.ess.ic.kanagawa-it.ac.jp/std_img/colorimage/Lenna.jpg", mode="url", hist="Lenna")
     ```
+
+You get image histgram and their descriptive stastics.
 
 
