--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,7 @@ Install:
 
     ```R
     require("imhistR")
-    lrgbhist("http://www.ess.ic.kanagawa-it.ac.jp/std_img/colorimage/Lenna.jpg", mode="url", hist="Lenna")
+    lrgbhist(input="http://www.ess.ic.kanagawa-it.ac.jp/std_img/colorimage/Lenna.jpg", mode="url", hist="Lenna")
     ```
 
 You get image histgram and their descriptive stastics.
