--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,9 @@ knitr::opts_chunk$set(
 # imhistR
 
 imhistR is the easy image processing tool. This package focussed for luminance, RGB, Lab, and HSB(HSV) with image. 
-It motivated to visualize image color information. It have two main goals:
+It motivated to visualize image color information. 
+
+It have two main goals:
 
 * Draw an image histgramn quickly in R.
 
@@ -28,9 +30,8 @@ Install:
 * The latest development version get from github with
 
     ```R
-    if (packageVersion("devtools") < 1.6) {
-      install.packages("devtools")
-    }
+    # You runned following two line cord only when first time to use this package.
+    install.packages("devtools")
     devtools::install_github("mokazuma/imhistR")
     ```
 
@@ -42,5 +43,4 @@ Install:
     ```
 
 You get an image histgram and their descriptive stastics.
-
 
