--- a/README.Rmd
+++ b/README.Rmd
@@ -30,8 +30,8 @@ Install:
 * The latest development version get from github with
 
     ```R
-    # You runned following two line cord only when first time to use this package.
-    install.packages("devtools")
+    # You run following two line cord only when first time to use this package.
+    install.packages("devtools")  # if you are still not download
     devtools::install_github("mokazuma/imhistR")
     ```
 
@@ -39,7 +39,8 @@ Install:
 
     ```R
     require("imhistR")
-    lrgbhist(input="http://www.ess.ic.kanagawa-it.ac.jp/std_img/colorimage/Lenna.jpg", mode="url", hist="Lenna")
+    lrgbhist(input="http://www.ess.ic.kanagawa-it.ac.jp/std_img/colorimage/Lenna.jpg", 
+             mode="url", output="Lenna")
     ```
 
 You get an image histgram and their descriptive stastics.
