--- a/README.Rmd
+++ b/README.Rmd
@@ -43,5 +43,5 @@ Install:
              mode="url", output="Lenna")
     ```
 
-You get an image histgram and their descriptive stastics.
+You get an image histogram and their descriptive stastics.
 
