--- a/README.Rmd
+++ b/README.Rmd
@@ -45,3 +45,4 @@ Install:
 
 You get an image histogram and their descriptive stastics.
 
+The Japanese package vignette is available [here](http://rpubs.com/mokazuma/imhistR).
