--- a/README.Rmd
+++ b/README.Rmd
@@ -39,8 +39,8 @@ Install:
 
     ```R
     require("imhistR")
-    lrgbhist(input="http://www.ess.ic.kanagawa-it.ac.jp/std_img/colorimage/Lenna.jpg", 
-             mode="url", output="Lenna")
+    lrgbhist(input="https://www.r-project.org/Rlogo.png", 
+             mode="url", output="Rlogo", endoff=TRUE)
     ```
 
 You get an image histogram and their descriptive stastics.
