--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ Install:
 * The latest development version get from github with
 
     ```R
-    install.packages("devtools")  # if you are still not download
+    if (!require('devtools')) install.packages('devtools')
     devtools::install_github("mokazuma/imhistR")
     ```
 
@@ -38,7 +38,8 @@ Install:
 
     ```R
     require("imhistR")
-    lrgbhist(input="https://www.r-project.org/Rlogo.png", mode="url", output="Rlogo", endoff=TRUE)
+    lrgbhist(input="https://www.r-project.org/Rlogo.png", 
+             mode="url", output="Rlogo", endoff=TRUE)
     ```
 
 You get an image histogram and their descriptive stastics.
